--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <script src="https://kit.fontawesome.com/fe610186b2.js"></script>
     <title>Github Finder</title>
   </head>
   <body>
